menutop scrollball search has done

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,15 @@ body,
   background-color: #f1f2f6;
   height: 100%;
 }
+/*全局滚动条样式*/
+::-webkit-scrollbar {
+  width: 5px;
+  height: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+/* background-color: #01c8dc;
+border-radius: 3px; */
+  background-color: #b6b6b6;
+}
+/*全局滚动条样式结束*/
